Pipeline stall fix